# watson.oceanheart.ai

./: .env.dev  .env.example  .env.production  .env.production.template  .env.staging  .env.staging.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  GEMINI.md  Gemfile  README.md  build.config.ts  bun.test.config.ts  components.json  docker-compose.yml  docker-instructions.md  main.py  nixpacks.toml  ocker-compose.yml.bak  package.json  pyproject.toml  railway.toml  repomix-output.xml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: architecture-documenter.md  auth-system-porter.md  prd-breakdown-reviewer.md  readme-updater.md
.claude/commands/: ai-commit.md  analyze-project.md  architect.md  code-cleanup.md  code-review.md  commit-all.md  create-prd.md  e2e-ralph.md  e2e-start.md  find-dead-code.md  implement-prd.md  variant.md  (+2 more)
backend/: requirements.txt
deploy/: deploy.sh  fly.toml  railway.json  render.yaml
docker/: entrypoint-dev.sh  entrypoint.sh  gunicorn.conf.py  healthcheck.sh  init-db.sql  repomix-output.xml
e2e/: .gitignore  RALPH-E2E.md  README.md  TEST-PLAN-PRODUCTION.md  playwright.config.ts  test-results.json
frontend/: index.html  index.ts  node_modules  types.d.ts
scripts/: build-env.sh  build-production.sh  ci-local.sh  coverage-report.sh  dev-backend.sh  dev-frontend.sh  dev.sh  health-check.sh  migrate.sh  monitor.sh  optimize-assets.sh  pre-commit-hook.sh  rollback.sh  validate-build.js
spec/: review_validator_spec.rb  spec_helper.rb
(+235 files in other folders)
