[project]
name = "watson-oceanheart-ai"
version = "0.1.0"
description = "Clinical LLM output review and curation tool"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.28.0",
    # Testing dependencies
    "factory-boy>=3.3.0",
    "faker>=21.0.0",
    "coverage>=7.3.0",
    "django-coverage-plugin>=3.1.0",
    # Production dependencies
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
